Corrected the stats, added scroll for overflow and key prop

--- a/src/App.css
+++ b/src/App.css
@@ -85,18 +85,22 @@ nav > img {
 
 .card--holder {
   display: flex;
-  font-size: 12px;
-  display: flex;
-  flex-direction: row;
+  flex-wrap: nowrap;
+  gap: 20px;
+  overflow-x: auto;
   margin: 30px;
 }
 
 .card {
-  margin-right: 25px;
+  width: 175px;
+  font-size: 12px;
+  flex: 0 0 auto;
+  display: flex;
+  flex-direction: column;
 }
 
 .card--hero {
-  width: 175px;
+  width: 100%;
   height: 300px;
   position: relative;
 }
